--- a/res/i18n/en.json
+++ b/res/i18n/en.json
@@ -908,7 +908,7 @@
     "policy.sharkRelationsMerchants.label" : "Shark Relations: Merchants",
     "policy.sharkRelationsMerchants.desc" : "The sharks are experts of traveling through water, but not so much on land. Work together with their merchants to discover and share trade routes through water and land.<br>The more you trade, the more effective it becomes",
     "policy.siphoning.label" : "Siphoning",
-    "policy.siphoning.desc" : "Pacts no longer consume fractional necrocorns over time.  Instead, whenever a necrocorn is produced, it is spent to pay back debt, if the debt is greater than one whole necrocorn.  Small amounts of debt have no negative effects.",
+    "policy.siphoning.desc" : "Pacts no longer continuously consume necrocorns. Instead, whenever a necrocorn is produced, it may be siphoned away to pay off debt. Small amounts of debt are harmless.",
     "policy.socialism.label" : "Socialism",
     "policy.socialism.desc" : "Has no effect",
     "policy.spaceBasedTerraforming.label" : "Space-based terraforming",
@@ -934,9 +934,10 @@
     "policy.transkittenism.label" : "Transkittenism",
     "policy.transkittenism.desc" : "Give up kittenhood and merge with the AI. AI cores will be twice as effective, and there is no downside to AI level.",
     "policy.upfrontPayment.label": "Upfront Payment",
-    "policy.upfrontPayment.desc": "Reduce the Pact upkeep cost by 10%. Making new Pacts costs additional necrocorns. If there is any debt, it is more punishing.<br>Upon purchasing this policy, you must immediately pay the upfront cost for all Pacts you already have.",
+    "policy.upfrontPayment.desc": "Renegotiate Pacts to reduce upkeep cost by 10%. If there is any debt, it is more punishing.<br>Upon purchasing this policy, you must immediately pay the upfront cost for all existing Pacts.",
     "policy.upfrontPayment.payment.complete": "Paid {0} necrocorns due to your existing Pacts.",
     "policy.upfrontPayment.warning": "Consider paying off your debt completely before taking this policy.",
+    "policy.upfrontPayment.fractured": "The terms of negotiation are unfavorable.",
     "policy.zebraRelationsAppeasement.label" : "Zebra Relations: Appeasement",
     "policy.zebraRelationsAppeasement.desc" : "Try to befriend the zebras, even though they hate you. The terms of trade will be less harsh, but gold income will be slightly lower.",
     "policy.zebraRelationsBellicosity.label" : "Zebra Relations: Bellicosity",
