i18n stuff for the Siphoning Update

--- a/res/i18n/en.json
+++ b/res/i18n/en.json
@@ -462,6 +462,7 @@
     "effectsMgr.statics.factoryRefineRatio.title": "Factory refine bonus",
     "effectsMgr.statics.faithFromManuscripts.title": "Faith from manuscripts",
     "effectsMgr.statics.faithRatioReligion.title": "Faith bonus",
+    "effectsMgr.statics.feedEldersEfficiencyRatio.title": "Feeding efficiency",
     "effectsMgr.statics.festivalArrivalRatio.title" : "Festival growth rate",
     "effectsMgr.statics.festivalRatio.title" : "Festival effects",
     "effectsMgr.statics.festivalLuxuryConsumptionRatio.title": "Festival luxury consumption",
@@ -516,7 +517,9 @@
     "effectsMgr.statics.moonOutpost-unobtainiumPerTickSpace.title": "Lunar Outpost - Unobtainium conversion",
     "effectsMgr.statics.mysticismBonus.title" : "Mysticism Bonus",
     "effectsMgr.statics.nagaBlueprintTradeChance.title": "Naga blueprint trade chance",
+    "effectsMgr.statics.necrocornCorruptionInterference.title": "Corruption interference",
     "effectsMgr.statics.necrocornPerDay.pact.title": "Necrocorn consumption",
+    "effectsMgr.statics.necrocornUpfrontCost.title": "Upfront cost",
     "effectsMgr.statics.neutralRaceEmbassyStanding.title": "Embassy's standing ratio",
     "effectsMgr.statics.nextHashLevelAt.title": "Next hashrate level at",
     "effectsMgr.statics.nonZebraRelationModifier.title" : "Non-zebra relations modifier",
@@ -550,6 +553,7 @@
     "effectsMgr.statics.relicPerDay.title": "Relic production",
     "effectsMgr.statics.relicRefineRatio.title": "Relic refine bonus",
     "effectsMgr.statics.religionUpgradesDiscount.title" : "Religion upgrade discount",
+    "effectsMgr.statics.repayDebtOnNecrocornGeneration.title": "Necrocorn siphoning on generation",
     "effectsMgr.statics.resStasisRatio.title": "Res-Stasis ratio",
     "effectsMgr.statics.researchVessel-starchartPerTickBaseSpace.title": "Research Vessel - Starchart production",
     "effectsMgr.statics.riftChance.title": "Unicorns rift chance",
@@ -573,6 +577,7 @@
     "effectsMgr.statics.skillMultiplier.title": "Kitten's skill effect",
     "effectsMgr.statics.masterSkillMultiplier.title": "Master Kitten's skill effect",
     "effectsMgr.statics.skillXP.title": "Skills learning",
+    "effectsMgr.statics.smallDebtPunishmentExemption.title": "Debt punishment threshold",
     "effectsMgr.statics.smelterRatio.title": "Smelter bonus",
     "effectsMgr.statics.solarFarmRatio.title": "Solar Farm bonus",
     "effectsMgr.statics.solarFarmSeasonRatio.title": "Solar Farm seasonal bonus",
@@ -782,7 +787,9 @@
     "opts.enableKS": "Enable Kittens Scientist",
     "opts.enableKS.desc": "This is absolutely unsupported, you have never seen me or this setting",
 
-    "msg.necrocornDeficit.info": "Necrocorn deficit: {0}. Due to the deficit your pacts have {1}% effectivness. Deficit is consuming additional {2}% of necrocorns per day and is diminishing {3} per day (if you have enough necrocorns).",
+    "msg.necrocornDeficit.info": "Necrocorn deficit: {0}. Due to the deficit, your Pacts have {1}% effectiveness. Deficit is consuming additional {2}% of necrocorns per day and is diminishing {3} per day (if you have enough necrocorns).",
+    "msg.necrocornDeficit.info.with.siphoning": "Necrocorn deficit: {0}. Due to the deficit, your Pacts have {1}% effectiveness.",
+    "msg.necrocornDeficit.upfrontPayment.penalty": "Due to the terms of Upfront Payment, {0} is {1} less effective.",
     "msg.pacts.info": "Karma kittens per millenia are based on available pacts. Pacts do not persist. Available pacts: {0}. Every pact devours {1} necrocorns per day.",
     "msg.pacts.fractured": "You didn't fulfill your part of the deal... You lost {0} alicorns!",
     "opts.swipeNavigation": "Swipe navigation",
@@ -791,6 +798,7 @@
     "opts.pollution.desc": "Disable pollution effects",
 
     "msg.policy.aiNotMerges" : "AI does not want to merge with kittens.",
+    "msg.policy.cannotPayUpfront": "This policy requires an additional {0} {1}, which you cannot afford.",
     "msg.policy.exclusivity" : "Policies with the same numerical cost are mutually exclusive",
     "msg.policy.kittenNotMadeLeader" : "{0} can only be lead by a {1}",
     "msg.policy.wrongLeaderJobDemoted" : "{0} can only be lead by a {1}",
@@ -839,6 +847,8 @@
     "policy.extravagance.desc": "A faction of epicurean philosophers holds that society ought to double down on its current philosophy. Consumable luxury resources increase happiness even more, but are consumed three times as quickly.",
     "policy.fascism.label" : "Fascism",
     "policy.fascism.desc" : "Lebensraum! Population penalties to happiness are eliminated, and log cabins cost half as much.",
+    "policy.feedingFrenzy.label": "Feeding Frenzy",
+    "policy.feedingFrenzy.desc": "Your divine feast is more effective (based on available Pacts) but causes interference with necrocorn corruption. Necrocorns corrupt at full speed between 0 and 1 necrocorns.",
     "policy.frugality.label": "Frugality",
     "policy.frugality.desc": "Stoic philosophers are placed in charge of the mints, making them more effective by reducing corruption.",
     "policy.fullIndustrialization.label" : "Full Industrialization",
@@ -898,7 +908,7 @@
     "policy.sharkRelationsMerchants.label" : "Shark Relations: Merchants",
     "policy.sharkRelationsMerchants.desc" : "The sharks are experts of traveling through water, but not so much on land. Work together with their merchants to discover and share trade routes through water and land.<br>The more you trade, the more effective it becomes",
     "policy.siphoning.label" : "Siphoning",
-    "policy.siphoning.desc" : "Pacts slow down necrocorn corruption and consume alicorns, instead of directly consuming necrocorns. Lack of alicorns or corruption is compensated by consuming necrocorns.",
+    "policy.siphoning.desc" : "Pacts no longer continuously consume necrocorns. Instead, whenever a necrocorn is produced, it may be siphoned away to pay off debt. Small amounts of debt are harmless.",
     "policy.socialism.label" : "Socialism",
     "policy.socialism.desc" : "Has no effect",
     "policy.spaceBasedTerraforming.label" : "Space-based terraforming",
@@ -923,6 +933,11 @@
     "policy.tradition.desc" : "Good for culture-oriented societies. Reduces manuscript price and increases their effect. This will affect what policies are available in the future!",
     "policy.transkittenism.label" : "Transkittenism",
     "policy.transkittenism.desc" : "Give up kittenhood and merge with the AI. AI cores will be twice as effective, and there is no downside to AI level.",
+    "policy.upfrontPayment.label": "Upfront Payment",
+    "policy.upfrontPayment.desc": "Renegotiate Pacts to reduce upkeep cost by 10%. If there is any debt, it is more punishing.<br>Upon purchasing this policy, you must immediately pay the upfront cost for all existing Pacts.",
+    "policy.upfrontPayment.payment.complete": "Paid {0} necrocorns due to your existing Pacts.",
+    "policy.upfrontPayment.warning": "Consider paying off your debt completely before taking this policy.",
+    "policy.upfrontPayment.fractured": "The terms of negotiation are unfavorable.",
     "policy.zebraRelationsAppeasement.label" : "Zebra Relations: Appeasement",
     "policy.zebraRelationsAppeasement.desc" : "Try to befriend the zebras, even though they hate you. The terms of trade will be less harsh, but gold income will be slightly lower.",
     "policy.zebraRelationsBellicosity.label" : "Zebra Relations: Bellicosity",
@@ -1032,6 +1047,8 @@
     "religion.faithCount.pool": "Worship: {0}",
     "religion.adore.confirmation.msg": "Are you sure you want to convert all worship to epiphany?\n\nYou will get a bonus to faith conversion (Praise the sun) based on your total amount of epiphany.\n\nEpiphany and this bonus will carry over through resets.\n\nCLICKING THIS BUTTON WILL ERASE ALL WORSHIP AND RESET SOLAR REVOLUTION PRODUCTION BONUS.",
     "religion.msg.corruption": "Your alicorn has been corrupted by the markers!",
+    "religion.msg.siphoned.one": "Your alicorn was siphoned away to pay off debt.",
+    "religion.msg.siphoned.many": "{0} alicorns were siphoned away to pay off debt.",
     "religion.pact.pactOfAnnihilation.label" : "Pact of Annihilation",
     "religion.pact.pactOfAnnihilation.desc" : "Harness destructive power, increasing antimatter storage",
 	"religion.pact.pactOfCleansing.label": "Pact of Cleansing",
@@ -1185,6 +1202,7 @@
     "res.stack.buildings": "Buildings",
     "res.stack.corruptionExistPenalty": "Penalty",
     "res.stack.corruptionFromMarkers": "Markers",
+    "res.stack.corruptionInterference": "Interference",
     "res.stack.corruptionPerDay": "Corruption",
     "res.stack.corruptionPerDayProduction": "Corruption production",
     "res.stack.corruptionPerDaySiphoned": "Siphoning consumption",
