switch to svg icons for certain uniconde elements, slightly clean up themes to control main color accents with css variables, scale down large X/Y button values, default to meta.on instead of X/Y notation when meta.on is maxed, remove outdated links

--- a/res/i18n/en.json
+++ b/res/i18n/en.json
@@ -1779,7 +1779,7 @@
     "ui.filter.enabled": "Enabled",
     "ui.filter.togglable": "Togglable",
 
-    "ui.kgnet.login": "> Log in <",
+    "ui.kgnet.login": "Log in",
     "ui.kgnet.online": "Online",
     "ui.kgnet.save.current": "current",
     "ui.kgnet.save.save": "Save",
