Add new basge as well as upgrade to make that basge attainable

--- a/res/i18n/en.json
+++ b/res/i18n/en.json
@@ -2204,6 +2204,9 @@
     "workshop.aiBases.desc": "AI-powered logistics. Every active AI Core will increase the effectiveness of Moon Bases by 10%",
     "workshop.aiEngineers.label": "AI Engineers",
     "workshop.aiEngineers.desc": "A holy union of feline mind and a machine",
+    "workshop.alicornStable.label": "Alicorn Stable",
+    "workshop.alicornStable.desc": "+0.2 max alicorns",
+    "workshop.alicornStable.desc.noChallenge": "Congrats on beating the challenge! Now, this upgrade doesn't do anything anymore.",
     "workshop.alloyArmor.label": "Alloy Armour",
     "workshop.alloyArmor.desc": "Hunters are a bit more effective",
     "workshop.alloyAxe.label": "Alloy Axe",
