Add quick-sacrifice pin to left side

--- a/res/i18n/en.json
+++ b/res/i18n/en.json
@@ -1924,6 +1924,8 @@
     "left.hunt.time": "time",
     "left.hunt.times": "times",
     "left.praise": "Praise the sun!",
+    "left.sacrifice": "Sacrifice unicorns",
+    "left.sacrifice.all": "(all)",
 
     "console.filter.astronomicalEvent": "Astronomical Events",
     "console.filter.hunt": "Hunts",
