Unicorn Tears Challenge Reward Balancing (#155)
* Rebalance reward of Unicorn Tears Challenge.

* Add new Metaphysics upgrade: Alicornmancy

* Add test for when a Metaphysics upgrade is unlocked by default AND by another upgrade

* Unicornmancy now requires Chronomancy

* Fix bugs arising from sacrificing infinite unicorns

* Add new basge as well as upgrade to make that basge attainable

* Add ability to precraft unicorn tears when needed & wood when there are 0 kittens

* Add quick-sacrifice pin to left side

* Move complexity into religion.js to simplify code in other places

* Use CSS to make the new Fast Sacrifice Unicorns link look nice

---------

Co-authored-by: nuclear.unicorn <cheshire.panther@gmail.com>

--- a/res/i18n/en.json
+++ b/res/i18n/en.json
@@ -641,7 +641,6 @@
     "effectsMgr.statics.zebraPreparations.title": "Zebra Preparation",
     "effectsMgr.statics.zebraRelationModifier.title" : "Zebra relations modifier",
     "effectsMgr.statics.zigguratIvoryPriceRatio.title": "Ivory price ratio",
-    "effectsMgr.statics.zigguratIvoryCostIncrease.title": "Ivory base price",
     "effectsMgr.statics.zigguratTempleEffectPolicy.title" : "Ziggurat Order of the Sun effect",
     "effectsMgr.type.resConversion": "{0} conversion",
     "effectsMgr.type.resCraftRatio": "{0} craft effectiveness",
@@ -963,6 +962,8 @@
     "prestige.panel.label": "Metaphysics",
     "prestige.adjustmentBureau.label": "Adjustment Bureau",
     "prestige.adjustmentBureau.desc": "Unlocks additional game challenges.",
+    "prestige.alicornmancy.label": "Alicornmancy",
+    "prestige.alicornmancy.desc": "Increases the chance to get your first unicorns from hunting.\nAlicorn production will start instantly once unlocked.",
     "prestige.anachronomancy.label": "Anachronomancy",
     "prestige.anachronomancy.desc": "Time crystals and chronophysics will be saved across resets.",
     "prestige.ascoh.label": "ASCOH",
@@ -1926,6 +1927,7 @@
     "left.hunt.time": "time",
     "left.hunt.times": "times",
     "left.praise": "Praise the sun!",
+    "left.sacrifice": "Sacrifice unicorns",
 
     "console.filter.astronomicalEvent": "Astronomical Events",
     "console.filter.hunt": "Hunts",
@@ -2206,6 +2208,9 @@
     "workshop.aiBases.desc": "AI-powered logistics. Every active AI Core will increase the effectiveness of Moon Bases by 10%",
     "workshop.aiEngineers.label": "AI Engineers",
     "workshop.aiEngineers.desc": "A holy union of feline mind and a machine",
+    "workshop.alicornStable.label": "Alicorn Stable",
+    "workshop.alicornStable.desc": "+0.2 max alicorns",
+    "workshop.alicornStable.desc.noChallenge": "Congrats on beating the challenge! Now, this upgrade doesn't do anything anymore.",
     "workshop.alloyArmor.label": "Alloy Armour",
     "workshop.alloyArmor.desc": "Hunters are a bit more effective",
     "workshop.alloyAxe.label": "Alloy Axe",
