--- a/res/i18n/en.json
+++ b/res/i18n/en.json
@@ -1908,6 +1908,7 @@
     "ui.option.app.ios": "iOS",
     "ui.option.notation": "Notation:",
     "ui.option.pollution": "Disable pollution effects",
+    "ui.option.enableMobileUI": "Show additional mobile UI features",
 
     "queue.alphabeticalToggle": "Sort queue A➛Z",
     "queue.add": "Add to queue",
